--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0"/>
-	<title>Document</title>
+	<title>申请试用</title>
 	<style>
 		body{
 	    background: #f5f5f5;
@@ -154,7 +154,7 @@
 										'<p>需求及兴趣：'+ info.business + '</p>' +
 									'</div>';
 		$.ajax({
-			url: 'http://api.sendcloud.net/apiv2/mail/send',
+			url: 'https://api.sendcloud.net/apiv2/mail/send',
 			type: 'post',
 			data: {
 				apiUser: 'EricMeng_test_Sp1pzG',
