--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 					apiUser: 'EricMeng_test_Sp1pzG',
 					apiKey:'qtBgwFTd9NYX2m9x',
 					from: 'ChinaOffice@gensuitellc.com',
-					to: 'eric.meng@gensuitellc.com',
+					to: 'jason.yang@gensuitellc.com',
 					subject: '申请演示',
 					html: infoStr
 				},
@@ -195,7 +195,7 @@
 				contentType: "application/x-www-form-urlencoded; charset=utf-8",
 			})
 		} else{
-			$('.tip').html('<span class="red">请确认填写所有信息后再提交。</span>')
+			$('.tip').html('<span class="red">请确认所有信息都已填写后再次提交。</span>')
 		}
 		
 	}
