--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<div class="banner"></div>
 	<div class="layout">
 		<div class="header">
-			<h3>6月20日 上海 | EHS审核与检查培训报名表</h3>
+			<h3>6月20日 上海 | EHS审核与检查培训报名</h3>
 		</div>
 		<hr>
 		<div class="content">
