--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
 					apiUser: 'EricMeng_test_Sp1pzG',
 					apiKey:'qtBgwFTd9NYX2m9x',
 					from: 'ChinaOffice@gensuitellc.com',
-					// to: 'jason.yang@gensuitellc.com',
-					to: 'eric.meng@gensuitellc.com',
+					to: 'jason.yang@gensuitellc.com',
+					// to: 'eric.meng@gensuitellc.com',
 					subject: '申请演示',
 					html: infoStr
 				},
