--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0"/>
-	<title>EHS审核与检查培训报名表</title>
+	<title>Gensuite 2018中国客户大会</title>
 	<style>
 		*{
 			box-sizing: border-box;
@@ -50,7 +50,7 @@
 	    max-width: 640px;
 	    min-width: 300px;
 	    margin: 240px auto 0;
-	    padding: 0 5%;
+	    padding: 0 4%;
 	    position: relative;
 		}
 		
@@ -68,11 +68,11 @@
 		}
 		.submit{
 			margin: 7%;
-			border-radius: 3px;
-			width:68px;
-			height:21px;
+			border-radius: 4px;
+			width:72px;
+			height:28px;
 			color:#054ea8;
-			font-size:12px;
+			font-size:14px;
 			background:#d9eefd;
 			border:#7f9db9 1px solid;
 			padding: 0;
@@ -87,7 +87,7 @@
 	<div class="banner"></div>
 	<div class="layout">
 		<div class="header">
-			<h3>6月20日 上海 | EHS审核与检查培训报名</h3>
+			<h3>6月20日 上海 | Gensuite <br>2018中国客户大会</h3>
 		</div>
 		<hr>
 		<div class="content">
@@ -112,7 +112,7 @@
 				<input id="position" class="normal-input fr" type="text">
 			</div>
 			<div class="question q5">
-				<span>是否注册认证培训?</span>
+				<span>是否参加21号认证培训?(￥1000/位)</span>
 				<input id="register" class="register" type="checkbox">
 			</div>
 			<div class="tip question"></div>
